--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,3 +83,15 @@ top: 8px;
 border-radius: 8px;
 z-index: -1;
 }
+
+
+.progress-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 10px;
+  background: #ff0055;
+  transform-origin: 0%;
+  z-index: 999;
+}
